--- a/app/views/checklists/index.html.erb
+++ b/app/views/checklists/index.html.erb
@@ -13,7 +13,7 @@
 
 <% @checklists.each do |checklist| %>
   <tr>
-    <td><%= checklist.vehicle_number %></td>
+    <td><%= checklist.vehicle.number %></td>
     <td><%= checklist.location %></td>
     <td><%= checklist.status %></td>
     <td><%= checklist.driver %></td>
