--- a/app/views/checklists/new.html.erb
+++ b/app/views/checklists/new.html.erb
@@ -1,36 +1,43 @@
 <h1>New checklist</h1>
 
-Callsign:<br />
-<input type="text" name="callsign" id="callsign">&nbsp;<input type="button" value="Search" id="search_vehicle_btn" />
+Callsign:<br/>
+<input type="text" name="callsign" id="callsign">&nbsp;<input type="button" value="Search" id="search_vehicle_btn"/>
 <div id="status"></div>
 
 <%= render 'form' %>
 
 <script type="text/javascript">
-  $(document).ready(function(){
-    $("#search_vehicle_btn").click(function(){
-        $.ajax({
-            beforeSend: function(){
-              $("#status").html('Retrieving info...');
-            },
-            url: "http://localhost:3000/get-remote-vehicles.json?callsign=" + $("#callsign").val(),
-            success: function(response){
-              if(response.length == 0)
-              {
-                 // alert("No vehicle was found with callsign: " + $("#callsign").val());
-                 $("#status").html('No record found');
-                 $("form#new_checklist")[0].reset();
-                 return;
-              }
-              $("#checklist_vehicle_number").val(response[0].number);
-              $("#checklist_location").val(response[0].location);
-              $('#vehicle_vehicle_id :selected').text(response[0].number);
-              $("#status").html('');
-            }
-        })
+    $(document).ready(function () {
+        $("#search_vehicle_btn").click(function () {
+            $.ajax({
+                beforeSend:function () {
+                    $("#status").html('Retrieving info...');
+                },
+                url:"http://localhost:3000/get-remote-vehicles.json?callsign=" + $("#callsign").val(),
+                success:function (response) {
+                    if (response.length == 0) {
+                        // alert("No vehicle was found with callsign: " + $("#callsign").val());
+                        $("#status").html('No record found');
+                        //$("form#new_checklist")[0].reset();
+                        $('#vehicle_vehicle_id option').removeAttr('selected')
+                        return;
+                    }
+                    else {
+                        $("#checklist_vehicle_number").val(response[0].number);
+                        $("#checklist_location").val(response[0].location);
+                        $('#vehicle_vehicle_id option').removeAttr('selected')
+                        $('#vehicle_vehicle_id option').each(function () {
+                            if ($(this).text() == response[0].number)
+                                $(this).attr('selected', 'selected')
+                        })
+
+                        $("#status").html('');
+                    }
+                }
+            })
+        });
     });
-  });
 </script>
 
-<br />
+<br/>
 <%= link_to 'Back', checklists_path %>
